# ze-stonks

backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/router/: api.py
